--- a/packages/network/samba/config/smb.conf
+++ b/packages/network/samba/config/smb.conf
@@ -8,7 +8,7 @@
 # available from your machine
 
 [global]
-  server string = LibreELEC
+  server string = LibreDOMO
   browseable = yes
   writeable = yes
   printable = no
