--- a/packages/network/samba/config/smb.conf
+++ b/packages/network/samba/config/smb.conf
@@ -55,85 +55,22 @@
   writeable = yes
   root preexec = mkdir -p /storage/.update
 
-[Videos]
-  path = /storage/videos
+[Database]
+  path = /storage/database
   available = yes
   browseable = yes
   public = yes
   writeable = yes
-  root preexec = mkdir -p /storage/videos
+  root preexec = mkdir -p /storage/database
 
-[Music]
-  path = /storage/music
+[Scripts]
+  path = /storage/scripts
   available = yes
   browseable = yes
   public = yes
   writeable = yes
-  root preexec = mkdir -p /storage/music
+  root preexec = mkdir -p /storage/scripts
 
-[TV Shows]
-  path = /storage/tvshows
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/tvshows
-
-[Recordings]
-  path = /storage/recordings
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/recordings
-
-[Downloads]
-  path = /storage/downloads
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/downloads
-
-[Pictures]
-  path = /storage/pictures
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/pictures
-
-[Emulators]
-  path = /storage/emulators
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/emulators
-
-[Configfiles]
-  path = /storage/.config
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/.config
-
-[Userdata]
-  path = /storage/.kodi/userdata
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/.kodi/userdata
-
-[Screenshots]
-  path = /storage/screenshots
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/screenshots
 
 [Logfiles]
   path = /storage/logfiles
@@ -151,11 +88,3 @@
   public = yes
   writeable = yes
   root preexec = mkdir -p /storage/backup
-
-[Picons]
-  path = /storage/picons
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/picons/tvh /storage/picons/vdr
